--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header nav ul li {
 
 body{
     text-align: center;
-        background-image: url("/img/cookies.jpg") ;
+        background-image: url("./img/cookies.jpg") ;
         margin: 1.5%;
     }
     div{
